--- a/src/components/Object/styles.css
+++ b/src/components/Object/styles.css
@@ -4,7 +4,6 @@
     width: 170px;
     height: 170px;
     max-height: 170px;
-    /* background-color: rgb(251, 201, 230); */
     border-radius: 8px;
     display: flex;
     justify-content: center;
@@ -15,6 +14,7 @@
 .object_container .file_img_container {
     width: 100%;
     height: 95px;
+    cursor: pointer;
 }
 
 .object_container .file_img_container img {
@@ -36,6 +36,7 @@
 .object_container .folder_img_container {
     width: 100%;
     height: 80px;
+    cursor: pointer;
 }
 
 .object_container .folder_img_container img {
@@ -45,12 +46,14 @@
 .object_container .object_name {
     margin-top: 3px;
     text-align: center;
-    /* background-color: beige; */
     word-wrap: break-word;
     color: rgb(102, 102, 102);
+    font-size: 18px;
 }
 
 .object_selected {
-    border: 2px solid rgb(102, 195, 226);
     background-color: rgb(223, 240, 246);
+}
+.object_container .add_new_img_container {
+    cursor: pointer;
 }
