--- a/src/components/Overlay/styles.css
+++ b/src/components/Overlay/styles.css
@@ -5,9 +5,10 @@
     width: 420px;
     box-shadow: 5px 5px 20px 10px rgb(230, 230, 230);
     position: absolute;
-    top: 40%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
+    background-color: white;
 }
 
 .overlay_container .img_container {
@@ -18,6 +19,7 @@
 .overlay_container .img_container img {
     width: 20px;
     cursor: pointer;
+    opacity: 0.7;
 }
 
 
@@ -100,11 +102,22 @@
     padding: 12px 10px;
     border: none;
     border-radius: 10px;
-    margin: 25px 0;
+    margin: 25px 5px;
     cursor: pointer;
-    transition: 0.3s ease;
+    transition: all 0.3s ease;
 }
 
 .overlay_container .content button:focus {
     transform: scale(0.96);
 }
+
+.overlay_container .content .confirm-box button:first-child {
+    background-color: rgb(245, 48, 30);
+}
+
+.confirm-box {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+  }
+  
